dist-iter/tests/compile_fail_tests/task_macro_wrong_args/map_chunk_into_iter_missing_return_type.stderr
error: no rules expected the token `{`
 --> tests/compile_fail_tests/task_macro_wrong_args/map_chunk_into_iter_missing_return_type.rs:7:42
  |
7 |         |buf: impl Iterator<Item = i32>| { buf.map(|x| x + 1) }
  |                                          ^ no rules expected this token in macro call
  |
note: while trying to match `->`
 --> src/task.rs
  |
  |     (INPUT_CHUNK_SIZE = $IN:literal, OUTPUT_CHUNK_SIZE = $OUT:literal, |$closure_param:ident: impl Iterator<Item = $in:ty>| -> impl IntoI...
  |                                                                                                                             ^^
